# emotion_detector

./: .gitignore  README.md  inference.py  pyproject.toml  utils.py
